--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "main": "./index.js",
   "dependencies": {
-    "react": "15.2.1",
-    "react-native": "0.29.0"
+    "react": "^15.2.1",
+    "react-native": "^0.29.0"
   }
 }
